Set up Spotify Login

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "default": "secondsongchallenge"
+    "default": "secondsongchallenge",
+    "dev": "secondsongchallenge"
   }
 }
