--- a/firebase.json
+++ b/firebase.json
@@ -9,17 +9,14 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
     ]
   },
   "emulators": {
     "firestore": {
       "port": 8080
     }
+  },
+  "database": {
+    "rules": "database.rules.json"
   }
 }
