--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@testing-library/user-event": "^7.2.1",
     "express": "^4.17.1",
     "firebase": "^7.9.3",
+    "howler": "^2.1.3",
     "install": "^0.13.0",
     "npm": "^6.14.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-loading-screen": "0.0.17",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "simple-oauth2": "^3.3.0",
