--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "express": "^4.17.1",
-    "firebase": "^7.9.3",
+    "firebase": "^7.14.0",
     "howler": "^2.1.3",
     "install": "^0.13.0",
-    "npm": "^6.14.2",
+    "npm": "^6.14.4",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-fade-in": "^0.1.8",
     "react-flexview": "^4.0.4",
+    "react-howler": "^3.7.4",
     "react-loading": "^2.0.3",
     "react-loading-screen": "0.0.17",
     "react-lottie": "^1.2.3",
@@ -49,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest-canvas-mock": "^2.2.0"
   }
 }
