--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^7.9.3",
     "howler": "^2.1.3",
     "install": "^0.13.0",
+    "jest-canvas-mock": "^2.2.0",
     "npm": "^6.14.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
