--- a/package.json
+++ b/package.json
@@ -10,16 +10,24 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.4.1",
     "express": "^4.17.1",
     "firebase": "^7.9.3",
+    "howler": "^2.1.3",
     "install": "^0.13.0",
     "npm": "^6.14.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-fade-in": "^0.1.8",
+    "react-flexview": "^4.0.4",
+    "react-loading": "^2.0.3",
+    "react-loading-screen": "0.0.17",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "simple-oauth2": "^3.3.0",
-    "spotify-web-api-js": "^1.2.0"
+    "spotify-web-api-js": "^1.2.0",
+    "sweetalert2": "^9.10.10"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest-canvas-mock": "^2.2.0"
   }
 }
