--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "dependencies": {
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.9.0",
     "@material-ui/system": "^4.9.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "express": "^4.17.1",
+    "final-form-material-ui": "^0.3.0",
     "firebase": "^7.14.0",
+    "formik": "^2.1.4",
     "howler": "^2.1.3",
     "install": "^0.13.0",
     "jest-canvas-mock": "^2.2.0",
@@ -20,18 +24,21 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-fade-in": "^0.1.8",
+    "react-final-form": "^6.4.0",
     "react-flexview": "^4.0.4",
     "react-howler": "^3.7.4",
     "react-loading": "^2.0.3",
     "react-loading-screen": "0.0.17",
     "react-lottie": "^1.2.3",
+    "react-material-ui-form-validator": "^2.0.10",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-timeout": "^1.2.0",
     "reactstrap": "^8.4.1",
     "simple-oauth2": "^3.3.0",
     "spotify-web-api-js": "^1.2.0",
-    "sweetalert2": "^9.10.10"
+    "sweetalert2": "^9.10.10",
+    "yup": "^0.28.3"
   },
   "scripts": {
     "start": "react-scripts start",
