--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,7 +18,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
+    - run: unset CI
     - run: npm run build --if-present
     - run: npm test
       env:
-        CI: ""
+        CI: false
