--- a/firebase.json
+++ b/firebase.json
@@ -14,6 +14,12 @@
   "emulators": {
     "firestore": {
       "port": 8080
+    },
+    "database": {
+      "port": "8080"
+    },
+    "hosting": {
+      "port": 5000
     }
   },
   "database": {
