--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
         with:
-          name: dist
-          path: dist
+          name: build
+          path: ./build
   deploy:
     name: Deploy
     needs: build
@@ -35,7 +35,7 @@ jobs:
       - name: Download Artifact
         uses: actions/download-artifact@master
         with:
-          name: dist
+          name: build
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
