--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.5",
+    "@material-ui/core": "^4.9.11",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.50",
     "@material-ui/pickers": "^3.2.10",
-    "@material-ui/styles": "^4.9.0",
-    "@material-ui/system": "^4.9.3",
+    "@material-ui/styles": "^4.9.10",
+    "@material-ui/system": "^4.9.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
@@ -20,9 +21,9 @@
     "howler": "^2.1.3",
     "install": "^0.13.0",
     "jest-canvas-mock": "^2.2.0",
-    "npm": "^6.14.2",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "npm": "^6.14.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-fade-in": "^0.1.8",
     "react-final-form": "^6.4.0",
     "react-flexview": "^4.0.4",
@@ -35,10 +36,10 @@
     "react-scripts": "3.4.0",
     "react-timeout": "^1.2.0",
     "reactstrap": "^8.4.1",
-    "simple-oauth2": "^3.3.0",
+    "simple-oauth2": "^3.4.0",
     "spotify-web-api-js": "^1.2.0",
-    "sweetalert2": "^9.10.10",
-    "yup": "^0.28.3"
+    "sweetalert2": "^9.10.12",
+    "yup": "^0.28.4"
   },
   "scripts": {
     "start": "react-scripts start",
