--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -28,6 +28,6 @@ jobs:
     - run: npm install
     - run: unset CI
     - run: npm run build --if-present
-    - run: firebase emulators:exec --only firestore 'npm test'
+    - run: npm test
       env:
         CI: false
