--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -28,6 +28,8 @@ jobs:
     - run: npm install
     - run: unset CI
     - run: npm run build --if-present
+    - name: Run Jest
+      uses: IIIMPACT/firebase-firestore-testing-action@v3.1.1
     - run: npm test
       env:
         CI: false
