--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -26,10 +26,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
+    - run: npm i -g firebase-tools
     - run: unset CI
     - run: npm run build --if-present
-    - name: Run Jest
-      uses: IIIMPACT/firebase-firestore-testing-action@v3.1.1
     - run: npm test
       env:
         CI: false
