--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,6 +29,6 @@ jobs:
     - run: npm i -g firebase-tools
     - run: unset CI
     - run: npm run build --if-present
-    - run: firebase emulators:exec --only firestore 'npm test'
+    - run: firebase emulators:exec --only firestore 'npm test' --token
       env:
         CI: false
