--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,6 +29,8 @@ jobs:
     - run: npm i -g firebase-tools
     - run: unset CI
     - run: npm run build --if-present
-    - run: firebase emulators:exec --only firestore 'npm test' --token
+    - run: firebase emulators:exec --only firestore 'npm test'
       env:
         CI: false
+        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+        PROJECT_ID: secondsongchallenge
