--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -26,8 +26,11 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
+    - run: npm i -g firebase-tools
     - run: unset CI
     - run: npm run build --if-present
-    - run: npm test
+    - run: firebase emulators:exec --only firestore 'npm test --detectOpenHandles'
       env:
         CI: false
+        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+        PROJECT_ID: secondsongchallenge
