--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@firebase/testing": "^0.19.2",
     "@material-ui/core": "^4.9.11",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.50",
@@ -17,6 +18,7 @@
     "express": "^4.17.1",
     "final-form-material-ui": "^0.3.0",
     "firebase": "^7.14.0",
+    "firebase-functions": "^3.6.1",
     "formik": "^2.1.4",
     "howler": "^2.1.3",
     "install": "^0.13.0",
@@ -37,6 +39,7 @@
     "react-timeout": "^1.2.0",
     "reactstrap": "^8.4.1",
     "simple-oauth2": "^3.4.0",
+    "sinon": "^9.0.2",
     "spotify-web-api-js": "^1.2.0",
     "sweetalert2": "^9.10.12",
     "yup": "^0.28.4"
